Refactor streams and update Person equality check.
Replaced `Arrays.asList` with `List.of` for immutability and simplified the `equals` method using the "instanceof pattern matching" feature. Added a debug statement with `peek` in the stream pipeline to log thread details. Improved readability of comments and code alignment.